--- a/src/Components/BodyAll/filter.css
+++ b/src/Components/BodyAll/filter.css
@@ -8,6 +8,8 @@
     border: 1px solid #ddd; 
     border-radius: 8px; 
     background-color: #f9f9f9; 
+    margin-left: 300px;
+  max-width: 300px;
   } 
    
   .filter-group { 
