--- a/src/Components/BodyAll/filter.css
+++ b/src/Components/BodyAll/filter.css
@@ -53,3 +53,31 @@
   .search-button:hover { 
     background-color: #0056b3; 
   }
+  .slick-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  /* Սլայդերի վերևում գտնվող նկարները */
+  .slick-slide img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+  }
+  
+  /* Փոքրիկ նկարների համար (հիմնական պատկերները) */
+  .image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .slick-track {
+    display: flex;
+    justify-content: space-between; /* Փոխարինեք սլայդերի միջև եղած տարածքը */
+    flex-wrap: nowrap;
+  }
+  
+  .slick-prev, .slick-next {
+    z-index: 10;
+  }
