--- a/src/Components/BodyAll/filter.css
+++ b/src/Components/BodyAll/filter.css
@@ -8,7 +8,9 @@
     border: 1px solid #ddd; 
     border-radius: 8px; 
     background-color: #f9f9f9; 
-  max-width: 300px;
+  max-width: 350px;
+  margin-left: 200px;
+
   } 
    
   .filter-group { 
@@ -59,22 +61,21 @@
     align-items: center;
   }
   
-  /* Սլայդերի վերևում գտնվող նկարները */
+
   .slick-slide img {
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
   }
   
-  /* Փոքրիկ նկարների համար (հիմնական պատկերները) */
   .image {
-    width: 100%;
-    height: 100%;
+    
+    
     object-fit: cover;
   }
   .slick-track {
     display: flex;
-    justify-content: space-between; /* Փոխարինեք սլայդերի միջև եղած տարածքը */
+    justify-content: space-between; 
     flex-wrap: nowrap;
   }
   
