--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-.photo{ 
-    background-image: url("https://myforestarmenia.org/_next/image?url=https%3A%2F%2Fvpiwcqabtvp5hqii.public.blob.vercel-storage.com%2Fimages%2F1715342006907.Carbon%2520Emission%2520Slider%2520MFA-HlFgBTZROmegyihWGkR4qGOmj3oyKN.jpg&w=3840&q=75"); 
-    background-repeat: no-repeat; 
-    margin-top: 100px; 
-    background-size: cover; 
-    height: 70vh; 
+.photo {
+  background-image: url("https://amaranoc.am/images/footer/home-add-application.png");
+  background-repeat: no-repeat;
+  margin-top: 100px;
+  background-size: cover;
+  height: 70vh;
 }
